--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -32,7 +32,7 @@
 
 .sidebar-content {
   flex-grow: 1;
-  padding: 20px;
+  padding: 20px 10px;
   overflow-y: auto;
 }
 
@@ -49,35 +49,41 @@
   background-color: #aaa;
 }
 
-.sidebar-content .sidebar-section {
-  margin-bottom: 20px;
-}
-
-.sidebar-content .sidebar-section h2 {
-  font-size: 20px;
-  color: #333;
-}
-
-.sidebar-content .sidebar-section ul {
+.sidebar-content ul {
   list-style-type: none;
   padding: 0;
 }
-.sidebar-content .sidebar-section ul li {
-  padding: 10px;
-  font-size: 16px;
-  color: #555;
+
+.sidebar-content ul li {
+  font-size: 18px;
+  padding: 10px 10px;
+  display: flex;
+  align-items: center;
   cursor: pointer;
   transition: background-color 0.3s;
-  border-radius: 8px;
+}
+.sidebar-content ul li:hover {
+  background-color: #b4e6cf;
+}
+.sidebar-content ul li .icon {
+  width: 2rem;
+  margin-right: 10px;
+}
+.sidebar-content ul li .icon:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s;
 }
 
-.sidebar-content .sidebar-section ul li:hover {
-  background-color: #d1d1d1;
-}
-
-.sidebar-content .sidebar-section ul li.active {
-  background-color: #b0b0b0;
+.sidebar-content ul li.active {
+  background-color: #b4e6cf;
   font-weight: bold;
+}
+.sidebar-content ul li.active .rightLine {
+  background-color: #333;
+  width: 5px;
+  height: 25px;
+  position: relative;
+  margin-left: auto;
 }
 
 .sidebar-footer {
