--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -107,13 +107,74 @@
   font-weight: bold;
 }
 
-.sidebar-footer .ellipsis-icon {
-  width: 1.5rem;
-  cursor: pointer;
-  transition: transform 0.3s;
+.tooltip-container {
+  position: relative;
+  display: inline-block;
   margin-left: auto;
 }
 
-.sidebar-footer .ellipsis-icon:hover {
+.ellipsis-icon {
+  width: 1.5rem;
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+
+.ellipsis-icon:hover {
   transform: rotate(90deg);
+}
+
+.tooltip {
+  position: absolute;
+  bottom: 100%;
+  right: 0;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  margin-bottom: 10px;
+  z-index: 100;
+}
+
+.tooltip::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  right: 10px;
+  border-width: 6px;
+  border-style: solid;
+  border-color: white transparent transparent transparent;
+}
+
+.tooltip ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.tooltip li {
+  display: flex;
+  align-items: center;
+  padding: 10px 15px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.tooltip li:hover {
+  background-color: #f5f5f7;
+}
+
+.tooltip li:first-child {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+.tooltip li:last-child {
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.tooltip-icon {
+  margin-right: 8px;
+  font-size: 18px;
+  color: #666;
 }
